--- a/index.html
+++ b/index.html
@@ -59,42 +59,4 @@
                 — Scandal Murty
             </p>
             <div class="mt-6 flex flex-wrap gap-4">
-                <a href="https://www.linkedin.com/in/scandal-murty-403543225" target="_blank" class="inline-block bg-blue-500 hover:bg-blue-600 text-white font-bold py-3 px-6 rounded-lg shadow-md transition-colors duration-200">Connect on LinkedIn</a>
-                <a href="https://github.com/Scan93" target="_blank" class="inline-block bg-gray-700 hover:bg-gray-900 text-white font-bold py-3 px-6 rounded-lg shadow-md transition-colors duration-200">View GitHub Profile</a>
-            </div>
-        </section>
-
-        <section id="resume" class="bg-white p-6 rounded-xl shadow-md mb-8">
-            <h2 class="text-3xl font-semibold text-gray-800 mb-4">My Resume</h2>
-            <div class="flex flex-col items-center justify-center p-8 text-center">
-                <p class="text-xl leading-relaxed text-gray-700 mb-6">
-                    View and download my professional experience, education, and skills on my dedicated resume page.
-                </p>
-                <a href="resume.html" class="inline-block bg-blue-500 hover:bg-blue-600 text-white font-bold py-3 px-6 rounded-lg shadow-md transition-colors duration-200">
-                    View Full Resume
-                </a>
-            </div>
-        </section>
-
-        <section id="projects" class="bg-white p-6 rounded-xl shadow-md mb-8">
-            <h2 class="text-3xl font-semibold text-gray-800 mb-4">Data Analysis & Business Analysis Projects</h2>
-            <div class="flex flex-col items-center justify-center p-8 text-center">
-                <p class="text-xl leading-relaxed text-gray-700 mb-6">
-                    Explore my data analysis projects with interactive dashboards and code on a separate page.
-                </p>
-                <a href="projects.html" class="inline-block bg-blue-500 hover:bg-blue-600 text-white font-bold py-3 px-6 rounded-lg shadow-md transition-colors duration-200">
-                    View My Projects
-                </a>
-            </div>
-        </section>
-
-        <section id="hobbies" class="bg-white p-6 rounded-xl shadow-md mb-8">
-            <h2 class="text-3xl font-semibold text-gray-800 mb-4">My Hobbies & Personal Projects</h2>
-            <div class="flex flex-col items-center justify-center p-8 text-center">
-                <p class="text-xl leading-relaxed text-gray-700 mb-6">
-                    Explore my personal projects and hobbies, including 3D printing and electrical engineering, on a dedicated page.
-                </p>
-                <a href="hobbies.html" class="inline-block bg-blue-500 hover:bg-blue-600 text-white font-bold py-3 px-6 rounded-lg shadow-md transition-colors duration-200">
-                    View My Hobbies
-                </a>
-            </div>
+                <a href="
