--- a/index.html
+++ b/index.html
@@ -59,4 +59,61 @@
                 — Scandal Murty
             </p>
             <div class="mt-6 flex flex-wrap gap-4">
-                <a href="
+                <a href="https://www.linkedin.com/in/scandal-murty-403543225" target="_blank" class="inline-block bg-blue-500 hover:bg-blue-600 text-white font-bold py-3 px-6 rounded-lg shadow-md transition-colors duration-200">Connect on LinkedIn</a>
+                <a href="https://github.com/Scan93" target="_blank" class="inline-block bg-gray-700 hover:bg-gray-900 text-white font-bold py-3 px-6 rounded-lg shadow-md transition-colors duration-200">View GitHub Profile</a>
+            </div>
+        </section>
+
+        <section id="resume" class="bg-white p-6 rounded-xl shadow-md mb-8">
+            <h2 class="text-3xl font-semibold text-gray-800 mb-4">Scandal's Resume</h2>
+            <div class="text-gray-700 prose max-w-none">
+                <p>You can view my resume directly here or download the PDF version.</p>
+                <div class="mt-6 mb-6">
+                    <iframe src="ScandalMurtyResume.pdf" class="pdf-embed" title="Scandal's Resume">
+                        <p>It looks like your browser doesn't support PDFs. <a href="ScandalMurtyResume.pdf" class="text-blue-500 hover:underline font-bold">download the PDF here</a>.</p>
+                    </iframe>
+                </div>
+                <p class="mt-6 text-center">
+                    <a href="ScandalMurtyResume.pdf" target="_blank" class="inline-block bg-green-500 hover:bg-green-600 text-white font-bold py-3 px-6 rounded-lg shadow-md transition-colors duration-200" download>Download Full Resume (PDF)</a>
+                </p>
+            </div>
+        </section>
+
+        <section id="projects" class="bg-white p-6 rounded-xl shadow-md mb-8">
+            <h2 class="text-3xl font-semibold text-gray-800 mb-4">Data Analysis & Business Analysis Projects</h2>
+            <div class="flex flex-col items-center justify-center p-8 text-center">
+                <p class="text-xl leading-relaxed text-gray-700 mb-6">
+                    Explore my data analysis projects with interactive dashboards and code on a separate page.
+                </p>
+                <a href="projects.html" class="inline-block bg-blue-500 hover:bg-blue-600 text-white font-bold py-3 px-6 rounded-lg shadow-md transition-colors duration-200">
+                    View My Projects
+                </a>
+            </div>
+        </section>
+        
+        <section id="hobbies" class="bg-white p-6 rounded-xl shadow-md mb-8">
+            <h2 class="text-3xl font-semibold text-gray-800 mb-4">My Hobbies & Personal Projects</h2>
+            <div class="flex flex-col items-center justify-center p-8 text-center">
+                <p class="text-xl leading-relaxed text-gray-700 mb-6">
+                    Explore my personal projects and hobbies, including 3D printing and electrical engineering, on a dedicated page.
+                </p>
+                <a href="hobbies.html" class="inline-block bg-blue-500 hover:bg-blue-600 text-white font-bold py-3 px-6 rounded-lg shadow-md transition-colors duration-200">
+                    View My Hobbies
+                </a>
+            </div>
+        </section>
+    </main>
+
+    <footer class="bg-gray-800 text-white text-center p-4 mt-8 shadow-inner">
+        <div class="container mx-auto">
+            <p>&copy; Updated September 2025.</p>
+            <p class="text-sm mt-2">
+                Connect with me:
+                <a href="https://www.linkedin.com/in/scandal-murty-403543225" target="_blank" class="text-blue-400 hover:underline mx-2">LinkedIn</a> |
+                <a href="https://github.com/Scan93" target="_blank" class="text-blue-400 hover:underline mx-2">GitHub</a> |
+                <a href="mailto:scandalmurty@gmail.com" class="text-blue-400 hover:underline mx-2">Email</a>
+            </p>
+        </div>
+    </footer>
+</body>
+</html>
