--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <ul class="flex flex-wrap justify-center space-x-2 md:space-x-4">
                     <li><a href="index.html" class="nav-link px-4 py-2 rounded-lg transition-colors duration-200 hover:bg-gray-700 active">Home</a></li>
                     <li><a href="resume.html" class="nav-link px-4 py-2 rounded-lg transition-colors duration-200 hover:bg-gray-700">Resume</a></li>
-                    <li><a href="projects.html" class="nav-link px-4 py-2 rounded-lg transition-colors duration-200 hover:bg-gray-700">Projects</a></li>
+                    <li><a href="Projects.html" class="nav-link px-4 py-2 rounded-lg transition-colors duration-200 hover:bg-gray-700">Projects</a></li>
                     <li><a href="hobbies.html" class="nav-link px-4 py-2 rounded-lg transition-colors duration-200 hover:bg-gray-700">Hobbies</a></li>
                 </ul>
             </nav>
