--- a/index.html
+++ b/index.html
@@ -66,16 +66,13 @@
 
         <section id="resume" class="bg-white p-6 rounded-xl shadow-md mb-8">
             <h2 class="text-3xl font-semibold text-gray-800 mb-4">Scandal's Resume</h2>
-            <div class="text-gray-700 prose max-w-none">
-                <p>You can view my resume directly here or download the PDF version.</p>
-                <div class="mt-6 mb-6">
-                    <iframe src="ScandalMurtyResume.pdf" class="pdf-embed" title="Scandal's Resume">
-                        <p>It looks like your browser doesn't support PDFs. <a href="ScandalMurtyResume.pdf" class="text-blue-500 hover:underline font-bold">download the PDF here</a>.</p>
-                    </iframe>
-                </div>
-                <p class="mt-6 text-center">
-                    <a href="ScandalMurtyResume.pdf" target="_blank" class="inline-block bg-green-500 hover:bg-green-600 text-white font-bold py-3 px-6 rounded-lg shadow-md transition-colors duration-200" download>Download Full Resume (PDF)</a>
+            <div class="flex flex-col items-center justify-center p-8 text-center">
+                <p class="text-xl leading-relaxed text-gray-700 mb-6">
+                    View and download my professional experience, education, and skills on my dedicated resume page.
                 </p>
+                <a href="resume.html" class="inline-block bg-blue-500 hover:bg-blue-600 text-white font-bold py-3 px-6 rounded-lg shadow-md transition-colors duration-200">
+                    View Full Resume
+                </a>
             </div>
         </section>
 
