--- a/hobbies.html
+++ b/hobbies.html
@@ -43,9 +43,9 @@
                 <h3 class="text-2xl font-semibold text-gray-800 mb-3">3D Printing</h3>
                 <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
                     <div class="bg-gray-50 p-5 rounded-lg shadow-sm border border-gray-200">
-                        <h4 class="text-xl font-medium text-gray-800 mb-2">Project: WIP</h4>
+                        <h4 class="text-xl font-medium text-gray-800 mb-2">Project: Custom Power Bank</h4>
                         <p class="text-lg leading-relaxed text-gray-700 mb-3">
-                            Designed a power bank with fully custom designed parts
+                            Designed a power bank with fully custom designed parts.
                         </p>
                         <p class="text-gray-600 text-sm">
                             <em>Skills: Trimble Sketch Up - (advanced), Blender - (beginner), FDM 3D printing, post-processing.</em>
