--- a/hobbies.html
+++ b/hobbies.html
@@ -48,7 +48,7 @@
                             Designed a power bank with fully custom designed parts.
                         </p>
                         <p class="text-gray-600 text-sm">
-                            <em>Skills: Trimble Sketch Up - (advanced), Blender - (beginner), FDM 3D printing, post-processing.</em>
+                            <em>3D model made with Trimble Sketchup.</em>
                         </p>
                         <img src="https://placehold.co/400x250/e0e7ff/4f46e5?text=3D+Print+Image" alt="3D Printed Desk Organizer" class="mt-4 rounded-md shadow-md w-full h-auto object-cover">
                     </div>
