--- a/hobbies.html
+++ b/hobbies.html
@@ -45,7 +45,7 @@
                     <div class="bg-gray-50 p-5 rounded-lg shadow-sm border border-gray-200">
                         <h4 class="text-xl font-medium text-gray-800 mb-2">Project: Custom Power Bank</h4>
                         <p class="text-lg leading-relaxed text-gray-700 mb-3">
-                            Designed a power bank with fully custom designed parts.
+                            Designed a power bank with fully custom parts.
                         </p>
                         <p class="text-gray-600 text-sm">
                             <em>3D model made with Trimble Sketchup.</em>
