--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         </section>
 
         <section id="projects" class="bg-white p-6 rounded-xl shadow-md mb-8">
-            <h2 class="text-3xl font-semibold text-gray-800 mb-4">Data Analysis & Business Analysis Projects</h2>
+            <h2 class="text-3xl font-semibold text-gray-800 mb-4">Data Analysis Projects</h2>
             <div class="flex flex-col items-center justify-center p-8 text-center">
                 <p class="text-xl leading-relaxed text-gray-700 mb-6">
                     Explore my data analysis projects with interactive dashboards and code on a separate page.
