--- a/hobbies.html
+++ b/hobbies.html
@@ -91,7 +91,7 @@
                 </div>
             </div>
             <div>
-                <h3 class="text-2xl font-semibold text-gray-800 mb-3">Electrical Engineering (Beginner)</h3>
+                <h3 class="text-2xl font-semibold text-gray-800 mb-3">Electrical Engineering</h3>
                 <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
                     <div class="bg-gray-50 p-5 rounded-lg shadow-sm border border-gray-200">
                         <h4 class="text-xl font-medium text-gray-800 mb-2">Project: WIP</h4>
